src/main/java/com/example/lyclebackend/error/Exception/RestApiException.java
package com.example.lyclebackend.error.Exception;


import com.example.lyclebackend.error.ErrorCode.ErrorCode;
import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class RestApiException extends RuntimeException {

    private final ErrorCode errorCode;

}
